Fixing donor img alignment

--- a/assets/styles/components/_donors.scss
+++ b/assets/styles/components/_donors.scss
@@ -21,8 +21,8 @@
     }
 
     img {
-      vertical-align: top;
       display: inline-block;
+      vertical-align: middle;
 
       &.landscape {
         width: 100%;
